added navbar to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Kasra Nejad</title>
 </head>
 <body>
-  
+  <nav class="navbar">
+    <ul class="navbar__list">
+      <li class="navbar_listitem">Home</li>
+      <li class="navbar_listitem">About Me</li>
+      <li class="navbar_listitem">Portfolio</li>
+      <li class="navbar_listitem">Contact Me</li>
+    </ul>
+  </nav>
 </body>
 </html>
