--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./style.css">
   <title>Kasra Nejad</title>
 </head>
 <body>
@@ -15,5 +16,10 @@
       <li class="navbar_listitem">Contact Me</li>
     </ul>
   </nav>
+
+
+  <script type="text/javascript" src="./script.js">
+
+  </script>
 </body>
 </html>
