--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="about__description">
         <h3 class="about__description__title">About Me</h3>
         <p class="about__description__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet commodo lacinia. Sed tincidunt fermentum lorem sed suscipit.<br> Sed venenatis consequat ligula, sit amet elementum est aliquam id. Praesent varius est dolor, et rhoncus
-          risus consectetur eget. Aenean euismod risus vitae massa tempus lobortis.<br> Vestibulum id finibus quam.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet commodo lacinia. Sed tincidunt fermentum lorem sed suscipit. Sed venenatis consequat ligula, sit amet elementum est aliquam id. Praesent varius est dolor, et rhoncus
+          risus consectetur eget. Aenean euismod risus vitae massa tempus lobortis. Vestibulum id finibus quam.
         </p>
       </div>
     </div>
