--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
     </div>
 
   </div>
-  <script type="text/javascript" src="./script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
