--- a/src/index.html
+++ b/src/index.html
@@ -14,55 +14,68 @@
 <body>
   <div class="container">
 
-    <nav class="navbar">
-      <ul class="navbar__list">
-        <li class="navbar__list__item"><a href="#about">About Me</a></li>
-        <li class="navbar__list__item"><a href="#portfolio">Portfolio</a></li>
-        <li class="navbar__list__item"><a href="#contact">Contact Me</a></li>
-      </ul>
-    </nav>
-
     <div class="about" id="about">
       <div class="about__container">
-      <div class="about__container__logo">
-        <div class="about__container__logo__stack"><i class="fab fa-html5"></i></div>
-        <div class="about__container__logo__stack"><i class="fab fa-css3"></i></div>
-        <div class="about__container__logo__stack"><i class="fab fa-js"></i></div>
-        <div class="about__container__logo__stack"><i class="fab fa-gulp"></i></div>
+         <h1 class="about__container__title"><span>K</span>ASRA</h1>
+        <div class="about__container__description">
+
+          <p class="about__container__description__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet commodo lacinia. Sed tincidunt fermentum lorem sed suscipit. Sed venenatis consequat ligula, sit amet elementum est aliquam id. Praesent varius est dolor, et rhoncus risus consectetur
+            eget. Aenean euismod risus vitae massa tempus lobortis. Vestibulum id finibus quam.
+          </p>
+        </div>
+        <div class="about__container__skills">
+          <div class="about__container__skills__stack"><i class="fab fa-linkedin"></i></div>
+          <div class="about__container__skills__stack"><i class="fab fa-github"></i></div>
+          <div class="about__container__skills__stack"><i class="fas fa-envelope"></i></div>
+        </div>
+        <div class="about__container__arrow"><a href="#portfolio"><i class="fas fa-caret-down"></i></a></div>
       </div>
-      <div class="about__container__description">
-        <h3 class="about__container__description__title">About Me</h3>
-        <p class="about__container__description__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet commodo lacinia. Sed tincidunt fermentum lorem sed suscipit. Sed venenatis consequat ligula, sit amet elementum est aliquam id. Praesent varius est dolor, et rhoncus risus consectetur
-          eget. Aenean euismod risus vitae massa tempus lobortis. Vestibulum id finibus quam.
-        </p>
-      </div>
-     </div>
     </div>
 
     <div class="portfolio" id="portfolio">
       <div class="portfolio__project">
         <h5 class="portfolio__project__title">Restaurant</h5>
-        <img src="" alt="">
-        <p class="portfolio__project__skill"></p>
+        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="portfolio__project__stack">
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+        </div>
       </div>
 
       <div class="portfolio__project">
         <h5 class="portfolio__project__title">Calculator</h5>
-        <img src="" alt="">
-        <p class="portfolio__project__skill"></p>
+        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="portfolio__project__stack">
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+        </div>
       </div>
 
       <div class="portfolio__project">
         <h5 class="portfolio__project__title">Weather App</h5>
-        <img src="" alt="">
-        <p class="portfolio__project__skill"></p>
+        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="portfolio__project__stack">
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+        </div>
       </div>
 
       <div class="portfolio__project">
         <h5 class="portfolio__project__title">Data Map</h5>
-        <img src="" alt="">
-        <p class="portfolio__project__skill"></p>
+        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="portfolio__project__stack">
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+          <i class="fab fa-github portfolio__project__skill"></i>
+        </div>
       </div>
     </div>
 
