updated portfolio borders

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
 
     <div class="portfolio" id="portfolio">
       <div class="portfolio__project">
+             <div class="portfolio__project__container">
         <h5 class="portfolio__project__title">Restaurant</h5>
         <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
         <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -43,9 +44,11 @@
           <i class="fab fa-github portfolio__project__skill"></i>
           <i class="fab fa-github portfolio__project__skill"></i>
         </div>
+        </div>
       </div>
 
       <div class="portfolio__project">
+        <div class="portfolio__project__container">
         <h5 class="portfolio__project__title">Calculator</h5>
         <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
         <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -54,9 +57,11 @@
           <i class="fab fa-github portfolio__project__skill"></i>
           <i class="fab fa-github portfolio__project__skill"></i>
         </div>
+        </div>
       </div>
 
       <div class="portfolio__project">
+             <div class="portfolio__project__container">
         <h5 class="portfolio__project__title">Weather App</h5>
         <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
         <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -65,9 +70,11 @@
           <i class="fab fa-github portfolio__project__skill"></i>
           <i class="fab fa-github portfolio__project__skill"></i>
         </div>
+        </div>
       </div>
 
       <div class="portfolio__project">
+             <div class="portfolio__project__container">
         <h5 class="portfolio__project__title">Data Map</h5>
         <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
         <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -76,17 +83,13 @@
           <i class="fab fa-github portfolio__project__skill"></i>
           <i class="fab fa-github portfolio__project__skill"></i>
         </div>
+        </div>
       </div>
     </div>
 
     <div class="contact" id="contact">
-      <img src="" alt="" class="contact__list__picture">
-      <ul class="contact__list">
-        <li class="contact__list__item">Github</li>
-        <li class="contact__list__item">Linkedin</li>
-        <li class="contact__list__item">email</li>
-        <li class="contact__list__item">phone</li>
-      </ul>
+      <img src="images/k.png" alt="" class="contact__list__picture">
+
     </div>
 
   </div>
