set up portfolio section

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,10 @@
 
     <div class="about" id="about">
       <div class="about__container">
-         <h1 class="about__container__title"><span>K</span>ASRA</h1>
+        <h1 class="about__container__title">
+          <p>KASRA</p>
+          <p>NEJAD</p>
+        </h1>
         <div class="about__container__description">
 
           <p class="about__container__description__text">
@@ -35,54 +38,63 @@
 
     <div class="portfolio" id="portfolio">
       <div class="portfolio__project">
-             <div class="portfolio__project__container">
-        <h5 class="portfolio__project__title">Restaurant</h5>
-        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="portfolio__project__stack">
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
-        </div>
+        <div class="portfolio__project__container">
+          <h5 class="portfolio__project__title">Restaurant</h5>
+          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+          <p class="portfolio__project__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <div class="portfolio__project__stack">
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+          </div>
         </div>
       </div>
 
       <div class="portfolio__project">
         <div class="portfolio__project__container">
-        <h5 class="portfolio__project__title">Calculator</h5>
-        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="portfolio__project__stack">
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
-        </div>
-        </div>
-      </div>
-
-      <div class="portfolio__project">
-             <div class="portfolio__project__container">
-        <h5 class="portfolio__project__title">Weather App</h5>
-        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="portfolio__project__stack">
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
-        </div>
+          <h5 class="portfolio__project__title">Calculator</h5>
+          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+          <p class="portfolio__project__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <div class="portfolio__project__stack">
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+          </div>
         </div>
       </div>
 
       <div class="portfolio__project">
-             <div class="portfolio__project__container">
-        <h5 class="portfolio__project__title">Data Map</h5>
-        <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-        <p class="portfolio__project__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="portfolio__project__stack">
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
-          <i class="fab fa-github portfolio__project__skill"></i>
+        <div class="portfolio__project__container">
+          <h5 class="portfolio__project__title">Weather App</h5>
+          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+          <p class="portfolio__project__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+          </p>
+          <div class="portfolio__project__stack">
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+          </div>
         </div>
+      </div>
+
+      <div class="portfolio__project">
+        <div class="portfolio__project__container">
+          <h5 class="portfolio__project__title">Data Map</h5>
+          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
+          <p class="portfolio__project__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+          <div class="portfolio__project__stack">
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__skill"></i>
+            <i class="fab fa-github portfolio__project__stack__stack__skill"></i>
+          </div>
         </div>
       </div>
     </div>
