--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
+    crossorigin="anonymous">
 
   <title>Kasra Nejad</title>
 </head>
@@ -16,23 +17,46 @@
 
     <div class="about" id="about">
       <div class="about__container">
-        <h1 class="about__container__title">
-          <p>KASRA</p>
-          <p>NEJAD</p>
-        </h1>
+        <div class="about__container__title">
+          <h2 class="about__container__title__name">
+            <span class="letters">K</span>
+            <span class="letters">A</span>
+            <span class="letters">S</span>
+            <span class="letters">R</span>
+            <span class="letters">A</span>
+          </h2>
+          <h2 class="about__container__title__name">
+            <span class="letters">N</span>
+            <span class="letters">E</span>
+            <span class="letters">J</span>
+            <span class="letters">A</span>
+            <span class="letters">D</span>
+          </h2>
+        </div>
         <div class="about__container__description">
 
           <p class="about__container__description__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet commodo lacinia. Sed tincidunt fermentum lorem sed suscipit. Sed venenatis consequat ligula, sit amet elementum est aliquam id. Praesent varius est dolor, et rhoncus risus consectetur
-            eget. Aenean euismod risus vitae massa tempus lobortis. Vestibulum id finibus quam.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet commodo lacinia. Sed tincidunt fermentum lorem sed
+            suscipit. Sed venenatis consequat ligula, sit amet elementum est aliquam id. Praesent varius est dolor, et rhoncus
+            risus consectetur eget. Aenean euismod risus vitae massa tempus lobortis. Vestibulum id finibus quam.
           </p>
         </div>
         <div class="about__container__skills">
-          <div class="about__container__skills__stack"><i class="fab fa-linkedin"></i></div>
-          <div class="about__container__skills__stack"><i class="fab fa-github"></i></div>
-          <div class="about__container__skills__stack"><i class="fas fa-envelope"></i></div>
+          <div class="about__container__skills__stack">
+            <i class="fab fa-linkedin"></i>
+          </div>
+          <div class="about__container__skills__stack">
+            <i class="fab fa-github"></i>
+          </div>
+          <div class="about__container__skills__stack">
+            <i class="fas fa-envelope"></i>
+          </div>
         </div>
-        <div class="about__container__arrow"><a href="#portfolio"><i class="fas fa-caret-down"></i></a></div>
+        <div class="about__container__arrow">
+          <a href="#portfolio">
+            <i class="fas fa-caret-down"></i>
+          </a>
+        </div>
       </div>
     </div>
 
@@ -42,7 +66,8 @@
           <h5 class="portfolio__project__title">Restaurant</h5>
           <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
           <p class="portfolio__project__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
           <div class="portfolio__project__stack">
             <i class="fab fa-github portfolio__project__stack__skill"></i>
@@ -57,7 +82,8 @@
           <h5 class="portfolio__project__title">Calculator</h5>
           <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
           <p class="portfolio__project__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
           <div class="portfolio__project__stack">
             <i class="fab fa-github portfolio__project__stack__skill"></i>
