Fully responsive, no I.E support yet

--- a/src/index.html
+++ b/src/index.html
@@ -61,66 +61,48 @@
     </div>
 
     <div class="portfolio" id="portfolio">
-      <div class="portfolio__project">
-        <div class="portfolio__project__container">
-          <h5 class="portfolio__project__title">Restaurant</h5>
-          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-          <p class="portfolio__project__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-          <div class="portfolio__project__stack">
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-          </div>
+      <div class="portfolio__card active">
+        <div class="portfolio__card__project">
+          <img src="./images/about-background2.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+            width="100%">
+          <h3 class="portfolio__card__project__title">
+            Weather App
+          </h3>
+          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
+            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
+          <div class="portfolio__card__project__stack"></div>
+        </div>
+        <div class="portfolio__card__project">
+          <img src="./images/about-background.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+            width="100%">
+          <h3 class="portfolio__card__project__title">
+            Weather App
+          </h3>
+          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
+            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
+          <div class="portfolio__card__project__stack"></div>
         </div>
       </div>
-
-      <div class="portfolio__project">
-        <div class="portfolio__project__container">
-          <h5 class="portfolio__project__title">Calculator</h5>
-          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-          <p class="portfolio__project__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-          <div class="portfolio__project__stack">
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-          </div>
+      <div class="portfolio__card">
+        <div class="portfolio__card__project">
+          <img src="./images/about-background2.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+            width="100%">
+          <h3 class="portfolio__card__project__title">
+            Weather App
+          </h3>
+          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
+            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
+          <div class="portfolio__card__project__stack"></div>
         </div>
-      </div>
-
-      <div class="portfolio__project">
-        <div class="portfolio__project__container">
-          <h5 class="portfolio__project__title">Weather App</h5>
-          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-          <p class="portfolio__project__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-          </p>
-          <div class="portfolio__project__stack">
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="portfolio__project">
-        <div class="portfolio__project__container">
-          <h5 class="portfolio__project__title">Data Map</h5>
-          <img class="portfolio__project__image" src="images/placeholder.jpeg" alt="">
-          <p class="portfolio__project__description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
-          <div class="portfolio__project__stack">
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-            <i class="fab fa-github portfolio__project__stack__skill"></i>
-          </div>
+        <div class="portfolio__card__project">
+          <img src="./images/about-background.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+            width="100%">
+          <h3 class="portfolio__card__project__title">
+            Weather App
+          </h3>
+          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
+            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
+          <div class="portfolio__card__project__stack"></div>
         </div>
       </div>
     </div>
