--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="images/k.png">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
     crossorigin="anonymous">
-
   <title>Kasra Nejad</title>
 </head>
 
 <body>
   <div class="container">
-
     <div class="about" id="about">
       <div class="about__container">
         <div class="about__container__title">
@@ -34,21 +33,23 @@
           </h2>
         </div>
         <div class="about__container__description">
-
           <p class="about__container__description__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet commodo lacinia. Sed tincidunt fermentum lorem sed
-            suscipit. Sed venenatis consequat ligula, sit amet elementum est aliquam id. Praesent varius est dolor, et rhoncus
-            risus consectetur eget. Aenean euismod risus vitae massa tempus lobortis. Vestibulum id finibus quam.
+            I'm a front-end developer based out of London, UK.<br /> For the past two years I've created responsive
+            websites and
+            apps focused on expanding my development knowledge.
+            My current skills consist of React, Javascript, Git, Sass, CSS, HTML, and familiarity with REST
+            APIs and Gulp.
           </p>
         </div>
         <div class="about__container__skills">
           <div class="about__container__skills__stack">
-            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/kasra-saniee-nejad-72459b124/" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
           <div class="about__container__skills__stack">
-            <i class="fab fa-github"></i>
+            <a href="https://github.com/kasra-nejad" target="_blank"><i class="fab fa-github"></i></a>
           </div>
           <div class="about__container__skills__stack">
+            <a href="mailto:kasra_nejad1988@hotmail.com" target="_blank"></a>
             <i class="fas fa-envelope"></i>
           </div>
         </div>
@@ -63,53 +64,61 @@
     <div class="portfolio" id="portfolio">
       <div class="portfolio__card active">
         <div class="portfolio__card__project">
-          <img src="./images/about-background2.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+          <img src="./images/taskmanager.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
             width="100%">
           <h3 class="portfolio__card__project__title">
-            Weather App
+            <a href="https://kasra-nejad.github.io/taskmanager/" target="_blank">Task Manager</a>
           </h3>
-          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
-            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
-          <div class="portfolio__card__project__stack"></div>
+          <p class="portfolio__card__project__description"><a href="https://kasra-nejad.github.io/taskmanager/" target="_blank">This
+              front end project is a task manager made with react which consists of a to-do list, currency and weather
+              update connected to a live API, an inbox, a calendar, and a contact list. </a></p>
+          <div class="portfolio__card__project__stack"><i class="fab fa-react"></i><i class="fab fa-sass"></i></div>
         </div>
         <div class="portfolio__card__project">
-          <img src="./images/about-background.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+          <img src="./images/best_deal.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
             width="100%">
           <h3 class="portfolio__card__project__title">
-            Weather App
+            <a href="https://kasra-nejad.github.io/best_deal/" target="_blank">Deal Calculator</a>
           </h3>
-          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
-            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
-          <div class="portfolio__card__project__stack"></div>
+          <p class="portfolio__card__project__description"><a href="https://kasra-nejad.github.io/best_deal/" target="_blank">The
+              Deal calculator is a tool which helps the user find the best per dollar value of a given product.
+              The closer the score is to 100, the better the deal is. My first react app.</a></p>
+          <div class="portfolio__card__project__stack"><i class="fab fa-react"></i><i class="fab fa-sass"></i></div>
         </div>
+        <button class="portfolio__slideRight"><i class="fas fa-caret-right"></i></button>
+
       </div>
       <div class="portfolio__card">
         <div class="portfolio__card__project">
-          <img src="./images/about-background2.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+          <img src="./images/calculator.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
             width="100%">
           <h3 class="portfolio__card__project__title">
-            Weather App
+            <a href="https://kasra-nejad.github.io/calculator/" target="_blank">Calculator</a>
           </h3>
-          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
-            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
-          <div class="portfolio__card__project__stack"></div>
+          <p class="portfolio__card__project__description"><a href="https://kasra-nejad.github.io/calculator/" target="_blank">My
+              first personal Javascript project made in vanilla Javascript. A calculator, with basic functionality </a></p>
+          <div class="portfolio__card__project__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i><i class="fab fa-js"></i></div>
         </div>
         <div class="portfolio__card__project">
-          <img src="./images/about-background.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
+          <img src="./images/caspian.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
             width="100%">
           <h3 class="portfolio__card__project__title">
-            Weather App
+            <a href="http://caspiantile.ca" target="_blank">Caspian tile</a>
           </h3>
-          <p class="portfolio__card__project__description">Nunc finibus purus ut lorem efficitur sollicitudin. In quis lobortis est. Proin ac blandit velit. Suspendisse eget
-            ipsum vehicula, venenatis urna efficitur, pretium eros.</p>
-          <div class="portfolio__card__project__stack"></div>
+          <p class="portfolio__card__project__description">
+            <a href="http://caspiantile.ca" target="_blank">The Caspian Tile website was made for a local tiling
+              and flooring business. This responsive website was my first website and introduction to Web
+              development.</a></p>
+          <div class="portfolio__card__project__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i></div>
         </div>
+        <button class="portfolio__slideLeft"><i class="fas fa-caret-left"></i></button>
       </div>
     </div>
 
-    <div class="contact" id="contact">
-      <img src="images/k.png" alt="" class="contact__list__picture">
-
+    <div class="footer" id="footer">
+      <p class="footer__description">This site is fully responsive.<br /> Created using HTML, Sass, Javascript, and
+        Gulp
+      </p>
     </div>
 
   </div>
