--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <a href="https://github.com/kasra-nejad" target="_blank"><i class="fab fa-github"></i></a>
           </div>
           <div class="about__container__skills__stack">
-            <a href="mailto:kasra_nejad1988@hotmail.com" target="_blank"></a>
-            <i class="fas fa-envelope"></i>
+            <a href="mailto:kasra_nejad1988@hotmail.com"><i class="fas fa-envelope"></i></a>
+
           </div>
         </div>
         <div class="about__container__arrow">
