changed projects section design

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,8 @@
             <a href="https://github.com/kasra-nejad" target="_blank"><i class="fab fa-github"></i></a>
           </div>
           <div class="about__container__skills__stack">
-            <a href="mailto:kasra_nejad1988@hotmail.com" target="_blank"></a>
-            <i class="fas fa-envelope"></i>
+            <a href="mailto:kasra_nejad1988@hotmail.com"><i class="fas fa-envelope"></i></a>
+
           </div>
         </div>
         <div class="about__container__arrow">
@@ -62,67 +62,80 @@
     </div>
 
     <div class="portfolio" id="portfolio">
-      <div class="portfolio__card active">
-        <div class="portfolio__card__project">
-          <img src="./images/taskmanager.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
-            width="100%">
-          <h3 class="portfolio__card__project__title">
-            <a href="https://kasra-nejad.github.io/taskmanager/" target="_blank">Task Manager</a>
-          </h3>
-          <p class="portfolio__card__project__description"><a href="https://kasra-nejad.github.io/taskmanager/" target="_blank">This
-              front end project is a task manager made with react which consists of a to-do list, currency and weather
-              update connected to a live API, an inbox, a calendar, and a contact list. </a></p>
-          <div class="portfolio__card__project__stack"><i class="fab fa-react"></i><i class="fab fa-sass"></i></div>
+      <div class="portfolio__container">
+        <div class="portfolio__container__card taskManager">
+          <h3 class="portfolio__container__card__title">Task Manager</h3>
+          <p class="portfolio__container__card__description">This front end project is a task manager made with react
+            which consists of a to-do list, currency and weather update connected to a live API, an inbox, a calendar,
+            and a contact list.</p>
+          <div class="portfolio__container__card__stack"><i class="fab fa-react"></i><i class="fab fa-sass"></i></div>
+          <div class="portfolio__container__card__links">
+            <a class="portfolio__container__card__links__siteLink" href="https://kasra-nejad.github.io/taskmanager/"
+              target="_blank"><button>
+                View Project</button></a>
+            <a class="portfolio__container__card__links__githubLink" href="https://github.com/kasra-nejad/taskmanager"
+              target="_blank"><button>View
+                Code</button></a>
+          </div>
         </div>
-        <div class="portfolio__card__project">
-          <img src="./images/best_deal.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
-            width="100%">
-          <h3 class="portfolio__card__project__title">
-            <a href="https://kasra-nejad.github.io/best_deal/" target="_blank">Deal Calculator</a>
-          </h3>
-          <p class="portfolio__card__project__description"><a href="https://kasra-nejad.github.io/best_deal/" target="_blank">The
-              Deal calculator is a tool which helps the user find the best per dollar value of a given product.
-              The closer the score is to 100, the better the deal is. My first react app.</a></p>
-          <div class="portfolio__card__project__stack"><i class="fab fa-react"></i><i class="fab fa-sass"></i></div>
-        </div>
-        <button class="portfolio__slideRight"><i class="fas fa-caret-right"></i></button>
 
+        <div class="portfolio__container__card bestDeal">
+          <h3 class="portfolio__container__card__title">Product Value Calculator</h3>
+          <p class="portfolio__container__card__description">The Deal calculator is a tool which helps the user find
+            the best per dollar value of a given product. The closer the
+            score is to 100, the better the deal is. My first react app.</p>
+          <div class="portfolio__container__card__stack"><i class="fab fa-react"></i><i class="fab fa-sass"></i></div>
+          <div class="portfolio__container__card__links">
+            <a class="portfolio__container__card__links__siteLink" href="https://kasra-nejad.github.io/best_deal/"
+              target="_blank"><button>
+                View Project</button></a>
+            <a class="portfolio__container__card__links__githubLink" href="https://github.com/kasra-nejad/best_deal"
+              target="_blank"><button>View
+                Code</button></a>
+          </div>
+        </div>
+
+        <div class="portfolio__container__card caspianTile">
+          <h3 class="portfolio__container__card__title">Caspian Tile</h3>
+          <p class="portfolio__container__card__description">The Caspian Tile website was created for a local tiling
+            and
+            flooring business. This responsive website was my first
+            website in production.</p>
+          <div class="portfolio__container__card__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i></div>
+          <div class="portfolio__container__card__links">
+            <a class="portfolio__container__card__links__siteLink" href="https://caspiantile.ca" target="_blank"><button>
+                View Project</button></a>
+            <a class="portfolio__container__card__links__githubLink" href="https://github.com/kasra-nejad/caspian"
+              target="_blank"><button>View
+                Code</button></a>
+          </div>
+        </div>
+
+        <div class="portfolio__container__card calculator">
+          <h3 class="portfolio__container__card__title">Calculator</h3>
+          <p class="portfolio__container__card__description">My first personal created in vanilla Javascript. A
+            calculator with basic functionality</p>
+          <div class="portfolio__container__card__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i><i
+              class="fab fa-js"></i></div>
+          <div class="portfolio__container__card__links">
+            <a class="portfolio__container__card__links__siteLink" href="https://kasra-nejad.github.io/calculator/"
+              target="_blank"><button>
+                View Project</button></a>
+            <a class="portfolio__container__card__links__githubLink" href="https://github.com/kasra-nejad/calculator"
+              target="_blank"><button>View
+                Code</button></a>
+          </div>
+        </div>
       </div>
-      <div class="portfolio__card">
-        <div class="portfolio__card__project">
-          <img src="./images/calculator.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
-            width="100%">
-          <h3 class="portfolio__card__project__title">
-            <a href="https://kasra-nejad.github.io/calculator/" target="_blank">Calculator</a>
-          </h3>
-          <p class="portfolio__card__project__description"><a href="https://kasra-nejad.github.io/calculator/" target="_blank">My
-              first personal Javascript project made in vanilla Javascript. A calculator, with basic functionality </a></p>
-          <div class="portfolio__card__project__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i><i class="fab fa-js"></i></div>
-        </div>
-        <div class="portfolio__card__project">
-          <img src="./images/caspian.png" alt="portfolio-background" class="portfolio__card__project__image" height="100%"
-            width="100%">
-          <h3 class="portfolio__card__project__title">
-            <a href="http://caspiantile.ca" target="_blank">Caspian tile</a>
-          </h3>
-          <p class="portfolio__card__project__description">
-            <a href="http://caspiantile.ca" target="_blank">The Caspian Tile website was made for a local tiling
-              and flooring business. This responsive website was my first website and introduction to Web
-              development.</a></p>
-          <div class="portfolio__card__project__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i></div>
-        </div>
-        <button class="portfolio__slideLeft"><i class="fas fa-caret-left"></i></button>
+
+      <div class="footer" id="footer">
+        <p class="footer__description">This site is fully responsive.<br /> Created using HTML, Sass, Javascript, and
+          Gulp
+        </p>
       </div>
-    </div>
 
-    <div class="footer" id="footer">
-      <p class="footer__description">This site is fully responsive.<br /> Created using HTML, Sass, Javascript, and
-        Gulp
-      </p>
     </div>
-
-  </div>
-  <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
