--- a/index.html
+++ b/index.html
@@ -111,21 +111,32 @@
           </div>
         </div>
 
-        <div class="portfolio__container__card calculator">
-          <h3 class="portfolio__container__card__title">Calculator</h3>
-          <p class="portfolio__container__card__description">My first personal created in vanilla Javascript. A
-            calculator with basic functionality</p>
+        <div class="portfolio__container__card year">
+          <h3 class="portfolio__container__card__title">Year Fact</h3>
+          <p class="portfolio__container__card__description">This project uses the Fetch API to connect to numbersapi.com and display a random fact about the year the user types in the input box. </p>
           <div class="portfolio__container__card__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i><i
               class="fab fa-js"></i></div>
           <div class="portfolio__container__card__links">
-            <a class="portfolio__container__card__links__siteLink" href="https://kasra-nejad.github.io/calculator/"
+            <a class="portfolio__container__card__links__siteLink" href="https://kasra-nejad.github.io/fetch-year/"
               target="_blank"><button>
                 View Project</button></a>
-            <a class="portfolio__container__card__links__githubLink" href="https://github.com/kasra-nejad/calculator"
+            <a class="portfolio__container__card__links__githubLink" href="https://github.com/kasra-nejad/fetch-year"
               target="_blank"><button>View
                 Code</button></a>
           </div>
         </div>
+                <div class="portfolio__container__card calculator">
+                  <h3 class="portfolio__container__card__title">Calculator</h3>
+                  <p class="portfolio__container__card__description">My first personal created in vanilla Javascript. A
+                    calculator with basic functionality</p>
+                  <div class="portfolio__container__card__stack"><i class="fab fa-html5"></i><i class="fab fa-css3"></i><i class="fab fa-js"></i></div>
+                  <div class="portfolio__container__card__links">
+                    <a class="portfolio__container__card__links__siteLink" href="https://kasra-nejad.github.io/calculator/" target="_blank"><button>
+                        View Project</button></a>
+                    <a class="portfolio__container__card__links__githubLink" href="https://github.com/kasra-nejad/calculator" target="_blank"><button>View
+                        Code</button></a>
+                  </div>
+                </div>
       </div>
 
       <div class="footer" id="footer">
